
 -- Andreas Beckmann <anbe@debian.org>  Fri, 17 Dec 2021 15:43:05 +0100

nvidia-graphics-drivers (390.147-1) UNRELEASED; urgency=medium

  * New upstream legacy branch release 390.147 (2021-12-16).
    - Worked around a bug in Meson builds of libglvnd 1.3.0 that caused the
      nvidia_icd.json file to be installed in the wrong location.
    * Improved compatibility with recent Linux kernels.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 17 Dec 2021 15:43:05 +0100

nvidia-graphics-drivers (390.144-2) UNRELEASED; urgency=medium

  * Backport drm_device_has_pdev and set_current_state changes from 470.63.01
    to fix kernel module build for Linux 5.14.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 20 Sep 2021 21:13:35 +0200

nvidia-graphics-drivers (390.144-1) UNRELEASED; urgency=medium

  * New upstream legacy branch release 390.144 (2021-07-20).
    * Fixed CVE-2021-1093, CVE-2021-1094, CVE-2021-1095.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5211

  [ Andreas Beckmann ]
  * Refresh patches.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 21 Jul 2021 18:15:32 +0200

nvidia-graphics-drivers (390.143-1) UNRELEASED; urgency=medium

  * New upstream legacy branch release 390.143 (2021-04-19).
    * Fixed CVE-2021-1076.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5172
    - Fixed a bug where vkCreateSwapchain could cause the X Server to crash
      when an invalid imageFormat was provided.
    - Fixed a driver installation failure on Linux kernel 5.11 release
      candidates, where the NVIDIA kernel module failed to build with error
      "fatal error: asm/kmap_types.h: No such file or directory".

 -- Andreas Beckmann <anbe@debian.org>  Tue, 20 Apr 2021 02:04:19 +0200

nvidia-graphics-drivers (390.141-1) UNRELEASED; urgency=medium

  * New upstream legacy branch release 390.141 (2021-01-07).
    * Fixed CVE-2021-1056.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5142