@@ -9,7 +9,7 @@ Description: Add -Wa,-mimplicit-it=thumb to CFLAGS if building on ARM
 
 --- a/conftest.sh
 +++ b/conftest.sh
-@@ -194,7 +194,7 @@ build_cflags() {
+@@ -195,7 +195,7 @@
      done
  
      if [ "$ARCH" = "arm" ]; then
