@@ -44,6 +44,9 @@ nvidia-graphics-drivers (390.147-1) UNRELEASED; urgency=medium
       nvidia_icd.json file to be installed in the wrong location.
     * Improved compatibility with recent Linux kernels.
 
+  [ Andreas Beckmann ]
+  * Refresh patches.
+
  -- Andreas Beckmann <anbe@debian.org>  Fri, 17 Dec 2021 15:43:05 +0100
 
 nvidia-graphics-drivers (390.144-2) UNRELEASED; urgency=medium
